Volunteer: Updated responsiveness and fixed sections
Added form section, fixed background blur section
so that it no longer overlaps with footer.

L=ENG-381

TEST=manual
Worked locally

--- a/js/src/patina/pages/volunteer/Volunteer.module.css
+++ b/js/src/patina/pages/volunteer/Volunteer.module.css
@@ -22,16 +22,6 @@
   padding-bottom: 32px;
 }
 
-.backgroundBlur {
-  width: 100%;
-  height: 42.5%;
-  border-radius: 20px;
-  background: rgba(255, 61, 61, 0.2);
-  filter: blur(100px);
-  position: absolute;
-  z-index: 0;
-}
-
 .content {
   display: flex;
   flex-direction: column;
@@ -39,6 +29,7 @@
   z-index: 1;
   position: relative;
   width: 100%;
+  background-image: radial-gradient(#ff3d3d33 0%, #1a1b1e 65%);
 }
 
 .emailText {
